Better yaml names

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-articles:
-  - year: accepted
+issues:
+  - issue: accepted
     articles:
     - title: "Multiple Factor Analysis for Contingency Tables in the FactoMineR Package"
       authors: "Belchin Kostov, Monica Becue-Bertaut and Francois Husson"
