--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,80 @@ issues:
       url: Shang.pdf
 
     - title: "Statistical Software from a Blind Person's Perspective"
-      author: "A. Jonathan R. Godfrey"
+      authors: "A. Jonathan R. Godfrey"
       url: Godfrey.pdf
 
     - title: "QCA: A Package for Qualitative Comparative Analysis"
       authors: "Alrik Thiem and Adrian Dusa"
       url: Thiem+Dusa.pdf
+
+  - issue: "2012-2"
+    articles:
+    - title: Editorial
+      page: 3
+
+    - heading: Contributed Research Articles
+
+    - title: What's in a Name?
+      authors: Paul Murrell
+      page: 5
+      url: RJournal_2012-2_Murrell.pdf
+
+    - title: "It's Not What You Draw,It's What You Don't Draw"
+      authors: Paul Murrell
+      page: 13
+      url: RJournal_2012-2_Murrell2.pdf
+
+    - title: Debugging grid Graphics
+      authors: "Paul Murrell and Velvet Ly"
+      page: 19
+      url: archive/2012-2/RJournal_2012-2_Murrell+Ly.pdf
+
+    - title: "frailtyHL: A Package for Fitting Frailty Models with H-likelihood"
+      authors: "Il Do Ha, Maengseok Noh and Youngjo Lee"
+      page: 28
+      url: archive/2012-2/RJournal_2012-2_Do~Ha~et~al.pdf
+
+    - title: "influence.ME: Tools for Detecting Influential Data in Mixed Effects Models"
+      authors: "Rense Nieuwenhuis, Manfred te Grotenhuis, and Ben Pelzer"
+      page: 38
+      url: archive/2012-2/RJournal_2012-2_Nieuwenhuis~et~al.pdf
+
+    - title: "The crs Package: Nonparametric Regression Splines for Continuous and Categorical Predictors"
+      authors: Zhenghua Nie and Jeffrey S Racine
+      page: 48
+      url: RJournal_2012-2_Nie+S~Racine.pdf
+
+    - title: "Rfit: Rank-based Estimation for Linear Models"
+      authors: John D. Kloke and Joseph W. McKean,
+      page: 57
+      url: RJournal_2012-2_Kloke+McKean.pdf
+
+    - title: Graphical Markov Models with Mixed Graphs in R
+      authors: Kayvan Sadeghi and Giovanni M. Marchetti
+      page: 65
+      url: RJournal_2012-2_Sadeghi+Marchetti.pdf
+
+    - heading: Programmer's Niche
+
+    - title: The State of Naming Conventions in R
+      authors: "Rasmus B&aring;&aring;th"
+      page: 74
+      url: RJournal_2012-2_Baaaath.pdf
+
+    - heading: News and Notes
+
+    - title: Changes in R
+      page: 76
+
+    - title: Changes on CRAN
+      page: 80
+
+    - title: News from the Bioconductor Project
+      page: 101
+
+    - title: R Foundation News
+      page: 102
 
 
 
