--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ issues:
       page: 5
       url: RJournal_2012-2_Murrell.pdf
 
-    - title: "It's Not What You Draw,It's What You Don't Draw"
+    - title: "It's Not What You Draw, It's What You Don't Draw"
       authors: Paul Murrell
       page: 13
       url: RJournal_2012-2_Murrell2.pdf
@@ -93,5 +93,796 @@ issues:
     - title: R Foundation News
       page: 102
 
+
+- issue: 2009-1
+  year: 2009.0
+  num: 1
+  month: June
+  articles:
+  - author: John M. Chambers
+    title: Facets of R
+    journal: The R Journal
+    pages:
+    - 5
+    - 8
+    slug: Chambers
+  - author:
+    - Stefan Theu\ss{}l
+    - Achim Zeileis
+    title: Collaborative Software Development Using R-Forge
+    journal: The R Journal
+    pages:
+    - 9
+    - 14
+    slug: Theussl+Zeileis
+  - author: Paul Murrell
+    title: Drawing Diagrams with R
+    journal: The R Journal
+    pages:
+    - 15
+    - 21
+    slug: Murrell
+  - author:
+    - Gregoire Pau
+    - Wolfgang Huber
+    title: The hwriter Package
+    journal: The R Journal
+    pages:
+    - 22
+    - 24
+    slug: Pau+Huber
+  - author:
+    - Lennart F. Hoogerheide David Ardia
+    - Herman K. van Dijk
+    title: 'AdMit: Adaptive Mixtures of Student-$t$ Distributions'
+    journal: The R Journal
+    pages:
+    - 25
+    - 30
+    slug: Ardia+et+al
+  - author:
+    - Michel Jacques Vincent Goulet
+    - Mathieu Pigeon
+    title: 'expert: Modeling Without Data Using Expert Opinion'
+    journal: The R Journal
+    pages:
+    - 31
+    - 36
+    slug: Goulet+et+al
+  - author:
+    - Tetsuhisa Miwa Xuefei Mi
+    - Torsten Hothorn
+    title: |-
+      mvtnorm: New Numerical Algorithm for Multivariate Normal
+      Probabilities
+    journal: The R Journal
+    pages:
+    - 37
+    - 39
+    slug: Mi+et+al
+  - author:
+    - Donghoh Kim
+    - Hee-Seok Oh
+    title: |-
+      EMD: A Package for Empirical Mode Decomposition and Hilbert
+      Spectrum
+    journal: The R Journal
+    pages:
+    - 40
+    - 46
+    slug: Kim+Oh
+  - author:
+    - Megan Orr
+    - Peng Liu
+    title: |-
+      Sample Size Estimation while Controlling False Discovery
+      Rate for Microarray Experiments Using the ssize.fdr Package
+    journal: The R Journal
+    pages:
+    - 47
+    - 53
+    slug: Orr+Liu
+  - author:
+    - Christine Porzelius
+    - Harald Binder Jochen Knaus
+    - Guido Schwarzer
+    title: Easier Parallel Computing in R with snowfall and sfCluster
+    journal: The R Journal
+    pages:
+    - 54
+    - 59
+    slug: Knaus+et+al
+  - author:
+    - Michael Zeller
+    - Wen-Ching Lin Alex Guazzelli
+    - Graham Williams
+    title: 'PMML: An Open Standard for Sharing Models'
+    journal: The R Journal
+    pages:
+    - 60
+    - 65
+    slug: Guazzelli+et+al
+- issue: 2010-1
+  year: 2010.0
+  num: 1
+  month: June
+  articles:
+  - author:
+    - Setia Pramana
+    - Dan Lin
+    - Philippe Haldermans
+    - Ziv Shkedy
+    - Tobias Verbeke
+    - Hinrich G\"{o}hlmann
+    - An De Bondt
+    - Willem Talloen
+    - Luc Bijnens.
+    title: |-
+      IsoGene: An R Package for Analyzing Dose-response Studies
+      in Microarray Experiments
+    journal: The R Journal
+    pages:
+    - 5
+    - 12
+    slug: Pramana~et-al
+  - author:
+    - Patrick Brown
+    - Lutong Zhou
+    title: MCMC for Generalized Linear Mixed Models with glmmBUGS
+    journal: The R Journal
+    pages:
+    - 13
+    - 17
+    slug: Brown+Zhou
+  - author:
+    - Nils B.-Weidmann
+    - Kristian Skrede Gleditsch
+    title: Mapping and Measuring Country Shapes
+    journal: The R Journal
+    pages:
+    - 18
+    - 24
+    slug: Weidmann+Skrede~Gleditsch
+  - author:
+    - Stefan Wilhelm
+    - B. G. Manjunath
+    title: |-
+      tmvtnorm: A Package for the Truncated Multivariate Normal
+      Distribution
+    journal: The R Journal
+    pages:
+    - 25
+    - 29
+    slug: Wilhelm+Manjunath
+  - author:
+    - Frauke G\"unther
+    - Stefan Fritsch
+    title: 'neuralnet: Training of neural networks'
+    journal: The R Journal
+    pages:
+    - 30
+    - 38
+    slug: Guenther+Fritsch
+  - author:
+    - Wiebke Werft
+    - Axel Benner
+    title: |-
+      glmperm: A Permutation of Regressor Residuals Test for
+      Inference in Generalized Linear Models
+    journal: The R Journal
+    pages:
+    - 39
+    - 43
+    slug: Werft+Benner
+  - author:
+    - Jean Thioulouse
+    - Claire Valiente-Moro
+    - Lionel Zenner
+    title: |-
+      Online Reproducible Research: An Application to
+      Multivariate Analysis of Bacterial DNA Fingerprint Data
+    journal: The R Journal
+    pages:
+    - 44
+    - 52
+    slug: Thioulouse~et-al
+  - author: Michael P. Fay
+    title: |-
+      Two-sided Exact Tests and Matching Confidence Intervals for
+      Discrete Data
+    journal: The R Journal
+    pages:
+    - 53
+    - 58
+    slug: Fay
+- issue: 2011-1
+  year: 2011.0
+  num: 1
+  month: June
+  articles:
+  - author: Hadley Wickham
+    title: 'testthat: Get Started with Testing'
+    journal: The R Journal
+    pages:
+    - 5
+    - 10
+    slug: Wickham
+  - author:
+    - Angela Bohn
+    - Ingo Feinerer
+    - Kurt Hornik
+    - Patrick Mair
+    title: Content-Based Social Network Analysis of Mailing Lists
+    journal: The R Journal
+    pages:
+    - 11
+    - 18
+    slug: Bohn~et-al
+  - author:
+    - Yohan Chalabi
+    - Martin M\"achler
+    - and Diethelm W\"urtz
+    title: Rmetrics - timeDate Package
+    journal: The R Journal
+    pages:
+    - 19
+    - 24
+    slug: Chalabi~et-al
+  - author: Timoth\'ee Poisot
+    title: |-
+      The digitize Package: Extracting Numerical Data from
+      Scatterplots
+    journal: The R Journal
+    pages:
+    - 25
+    - 26
+    slug: Poisot
+  - author:
+    - David Ardia
+    - Kris Boudt
+    - Peter Carl
+    - Katharine M. Mullen
+    - Brian G. Peterson
+    title: Differential Evolution with DEoptim
+    journal: The R Journal
+    pages:
+    - 27
+    - 34
+    slug: Ardia~et-al
+  - author: Andy South
+    title: 'rworldmap: A New R package for Mapping Global Data'
+    journal: The R Journal
+    pages:
+    - 35
+    - 43
+    slug: South
+  - author:
+    - Fr\'ed\'eric Lafitte
+    - Dirk Van Heule
+    - Julien Van hamme
+    title: Cryptographic Boolean Functions with R
+    journal: The R Journal
+    pages:
+    - 44
+    - 47
+    slug: Lafitte~et-al
+  - author: Paul Murrell
+    title: Raster Images in R Graphics
+    journal: The R Journal
+    pages:
+    - 48
+    - 54
+    slug: Murrell
+  - author:
+    - Chris Fraley
+    - Adrian Raftery
+    - Tilmann Gneiting
+    - McLean Sloughter
+    - Veronica Berrocal
+    title: Probabilistic Weather Forecasting in R
+    journal: The R Journal
+    pages:
+    - 55
+    - 63
+    slug: Fraley~et-al
+  - author:
+    - David Kane
+    - Andrew Liu
+    - and Khanh Nguyen
+    title: Analyzing an Electronic Limit Order Book
+    journal: The R Journal
+    pages:
+    - 64
+    - 68
+    slug: Kane~et-al
+  - author: Rob J. Hyndman
+    title: Giving a useR! Talk
+    journal: The R Journal
+    pages:
+    - 69
+    - 71
+    slug: Hyndman
+  - author: Dianne Cook
+    title: Tips for Presenting Your Work
+    journal: The R Journal
+    pages:
+    - 72
+    - 74
+    slug: Cook
+- issue: 2012-1
+  year: 2012.0
+  num: 1
+  month: June
+  articles:
+  - author:
+    - Adrian G Barnett
+    - Peter Baker
+    - Annette J Dobson
+    title: Analysing Seasonal Data
+    journal: The R Journal
+    pages:
+    - 5
+    - 10
+    slug: G~Barnett-et-al
+  - author:
+    - Elizabeth E. Holmes
+    - Eric J. Ward
+    - Kellie Wills
+    title: |-
+      MARSS: Multivariate Autoregressive State-space Models for
+      Analyzing Time-series Data
+    journal: The R Journal
+    pages:
+    - 11
+    - 19
+    slug: Holmes~et-al
+  - author:
+    - Karl Ropkins
+    - David C. Carslaw
+    title: |-
+      openair -- Data Analysis Tools for the Air Quality
+      Community
+    journal: The R Journal
+    pages:
+    - 20
+    - 29
+    slug: Ropkins+Carslaw
+  - author: Daniel Adler
+    title: Foreign Library Interface
+    journal: The R Journal
+    pages:
+    - 30
+    - 40
+    slug: Adler
+  - author: John Lawson
+    title: 'Vdgraph: A Package for Creating Variance Dispersion Graphs'
+    journal: The R Journal
+    pages:
+    - 41
+    - 44
+    slug: Lawson
+  - author:
+    - Sarah C. Anoke
+    - Yuting Zhao
+    - Rafael Jaeger
+    - Nicholas J. Horton
+    title: |-
+      xgrid and R: Parallel Distributed Processing Using
+      Heterogeneous Groups of Apple Computers
+    journal: The R Journal
+    pages:
+    - 45
+    - 55
+    slug: Anoke~et-al
+  - author: Timothy P. Jurka
+    title: |-
+      maxent: An R Package for Low-memory Multinomial Logistic
+      Regression with Support for Semi-automated Text
+      Classification
+    journal: The R Journal
+    pages:
+    - 56
+    - 59
+    slug: Jurka
+  - author:
+    - Timothy T. Bergsma
+    - Michael S. Smith
+    title: |-
+      Sumo: An Authenticating Web Application with an Embedded R
+      Session
+    journal: The R Journal
+    pages:
+    - 60
+    - 63
+    slug: Bergsma+Smith
+  - author:
+    - Kurt Hornik
+    - Duncan Murdoch
+    - Achim Zeileis
+    title: |-
+      From the CoreWho Did What? The Roles of \proglangR Package
+      Authors and How to Refer to Them
+    journal: The R Journal
+    pages:
+    - 64
+    - 69
+    slug: Hornik~et-al
+- issue: 2009-2
+  year: 2009.0
+  num: 2
+  month: December
+  articles:
+  - author: John Fox
+    title: |-
+      Aspects of the Social Organization and Trajectory of the R
+      Project
+    journal: The R Journal
+    pages:
+    - 5
+    - 13
+    slug: Fox
+  - author:
+    - Carolin Strobl
+    - Torsten Hothorn
+    - Achim Zeileis
+    title: Party on!
+    journal: The R Journal
+    pages:
+    - 14
+    - 17
+    slug: Strobl~et-al
+  - author:
+    - Pierre Lafaye de Micheaux
+    - Benoit Liquet
+    title: |-
+      ConvergenceConcepts : an R Package to
+      Investigate-Various-Modes-of-Convergence
+    journal: The R Journal
+    pages:
+    - 18
+    - 25
+    slug: Lafaye~de-Micheaux+Liquet
+  - author:
+    - J.-F. Coeurjolly
+    - R. Drouilhet
+    - P. Lafaye de Micheaux
+    - J.-F. Robineau
+    title: |-
+      asympTest: A Simple R Package for Classical Parametric
+      Statistical Tests and Confidence Intervals in Large Samples
+    journal: The R Journal
+    pages:
+    - 26
+    - 30
+    slug: Coeurjolly~et-al
+  - author:
+    - J.-Carpenter
+    - G.-R\"ucker
+    - G.-Schwarzer
+    title: 'copas: An R package for Fitting the Copas Selection Model'
+    journal: The R Journal
+    pages:
+    - 31
+    - 36
+    slug: Carpenter~et-al
+  - author: Anthony Damico
+    title: |-
+      Transitioning to R: Replicating SAS, Stata, and SUDAAN
+      Analysis Techniques in Health Policy Data
+    journal: The R Journal
+    pages:
+    - 37
+    - 44
+    slug: Damico
+  - author: Graham J Williams
+    title: 'Rattle: A Data Mining GUI for R'
+    journal: The R Journal
+    pages:
+    - 45
+    - 55
+    slug: Williams
+  - author:
+    - Spencer Graves
+    - Sundar Dorai-Raj
+    - Romain Fran\c{c}ois
+    title: 'sos: Searching Help Pages of R Packages'
+    journal: The R Journal
+    pages:
+    - 56
+    - 59
+    slug: Graves~et-al
+  - author:
+    - Duncan Murdoch
+    - Simon Urbanek
+    title: The New R\ Help System
+    journal: The R Journal
+    pages:
+    - 60
+    - 65
+    slug: Murdoch+Urbanek
+- issue: 2010-2
+  year: 2010.0
+  num: 2
+  month: December
+  articles:
+  - author:
+    - Karline Soetaert
+    - Thomas Petzoldt
+    - R. Woodrow Setzer
+    title: Solving Differential Equations in R
+    journal: The R Journal
+    pages:
+    - 5
+    - 15
+    slug: Soetaert~et-al
+  - author: Duncan Murdoch
+    title: Source References
+    journal: The R Journal
+    pages:
+    - 16
+    - 19
+    slug: Murdoch
+  - author:
+    - Lars R\"{o}nneg{\aa}rd
+    - Xia Shen
+    - Moudud Alam
+    title: |-
+      hglm: A Package for Fitting Hierarchical Generalized Linear
+      Models
+    journal: The R Journal
+    pages:
+    - 20
+    - 28
+    slug: Roennegaard~et-al
+  - author: P\'{e}ter S\'{o}lymos
+    title: 'dclone: Data Cloning in R'
+    journal: The R Journal
+    pages:
+    - 29
+    - 37
+    slug: Solymos
+  - author: Hadley Wickham
+    title: 'stringr: modern, consistent string processing'
+    journal: The R Journal
+    pages:
+    - 38
+    - 40
+    slug: Wickham
+  - author:
+    - David Ardia
+    - Lennart F. Hoogerheide
+    title: |-
+      Bayesian Estimation of the GARCH(1,1) Model with Student-t
+      Innovations
+    journal: The R Journal
+    pages:
+    - 41
+    - 47
+    slug: Ardia+Hoogerheide
+  - author: Adelino Ferreira da Silva
+    title: 'cudaBayesreg: Bayesian Computation in CUDA'
+    journal: The R Journal
+    pages:
+    - 48
+    - 55
+    slug: Ferreira~da-Silva
+  - author:
+    - Christopher R. Bilder
+    - Boan Zhang
+    - Frank Schaarschmidt
+    - Joshua M. Tebbs
+    title: 'binGroup: A Package for Group Testing'
+    journal: The R Journal
+    pages:
+    - 56
+    - 60
+    slug: Bilder~et-al
+  - author:
+    - Murat Sariyar
+    - Andreas Borg
+    title: 'The RecordLinkage Package: Detecting Errors in Data'
+    journal: The R Journal
+    pages:
+    - 61
+    - 67
+    slug: Sariyar+Borg
+  - author:
+    - Hemant Ishwaran
+    - Udaya B. Kogalur
+    - J. Sunil Rao
+    title: |-
+      spikeslab: Prediction and Variable Selection Using Spike
+      and Slab Regression
+    journal: The R Journal
+    pages:
+    - 68
+    - 73
+    slug: Ishwaran~et-al
+- issue: 2011-2
+  year: 2011.0
+  num: 2
+  month: December
+  articles:
+  - author:
+    - Thomas Baier
+    - Erich Neuwirth
+    - Michele De Meo
+    title: Creating and Deploying an Application with (R)Excel and R
+    journal: The R Journal
+    pages:
+    - 5
+    - 11
+    slug: Baier~et-al
+  - author: Ian C. Marschner
+    title: |-
+      glm2: Fitting Generalized Linear Models with Convergence
+      Problems
+    journal: The R Journal
+    pages:
+    - 12
+    - 15
+    slug: Marschner
+  - author: Michael Lundholm
+    title: |-
+      Implementing the Compendium Concept with Sweave and
+      DOCSTRIP
+    journal: The R Journal
+    pages:
+    - 16
+    - 21
+    slug: Lundholm
+  - author:
+    - Kurt Hornik
+    - Duncan Murdoch
+    title: Watch Your Spelling!
+    journal: The R Journal
+    pages:
+    - 22
+    - 28
+    slug: Hornik+Murdoch
+  - author:
+    - Haizhou Wang
+    - Mingzhou Song
+    title: |-
+      Ckmeans.1d.dp: Optimal $k$-means Clustering in One
+      Dimension by Dynamic Programming
+    journal: The R Journal
+    pages:
+    - 29
+    - 33
+    slug: Wang+Song
+  - author:
+    - Taylor B. Arnold
+    - John W. Emerson
+    title: |-
+      Nonparametric Goodness-of-Fit Tests for Discrete Null
+      Distributions
+    journal: The R Journal
+    pages:
+    - 34
+    - 39
+    slug: Arnold+Emerson
+  - author:
+    - Markus Gesmann
+    - Diego de Castillo
+    title: Using the Google Visualisation API with R
+    journal: The R Journal
+    pages:
+    - 40
+    - 44
+    slug: Gesmann+de~Castillo
+  - author: Maxime Herv\'e
+    title: |-
+      GrapheR: a Multiplatform GUI for Drawing Customizable
+      Graphs in R
+    journal: The R Journal
+    pages:
+    - 45
+    - 53
+    slug: Herve
+  - author: Han Lin Shang
+    title: |-
+      rainbow: An R Package for Visualizing Functional Time
+      Series
+    journal: The R Journal
+    pages:
+    - 54
+    - 59
+    slug: Lin~Shang
+  - author: Martyn Plummer
+    title: 'Programmer''s Niche: Portable C++ for R Packages'
+    journal: The R Journal
+    pages:
+    - 60
+    - 63
+    slug: Plummer
+- issue: 2012-2
+  year: 2012.0
+  num: 2
+  month: December
+  articles:
+  - author: Paul Murrell
+    title: What's in a Name?
+    journal: The R Journal
+    pages:
+    - 5
+    - 12
+    slug: Murrell
+  - author: Paul Murrell
+    title: It's Not What You Draw, It's What You Don't Draw
+    journal: The R Journal
+    pages:
+    - 13
+    - 18
+    slug: Murrell2
+  - author:
+    - Paul Murrell
+    - Velvet Ly
+    title: Debugging grid Graphics
+    journal: The R Journal
+    pages:
+    - 19
+    - 27
+    slug: Murrell+Ly
+  - author:
+    - Il Do Ha
+    - Maengseok Noh
+    - Youngjo Lee
+    title: |-
+      frailtyHL: A Package for Fitting Frailty Models with
+      H-likelihood
+    journal: The R Journal
+    pages:
+    - 28
+    - 37
+    slug: Do~Ha-et-al
+  - author:
+    - Rense Nieuwenhuis
+    - Manfred te Grotenhuis
+    - and Ben Pelzer
+    title: |-
+      influence.ME: Tools for Detecting Influential Data in Mixed
+      Effects Models
+    journal: The R Journal
+    pages:
+    - 38
+    - 47
+    slug: Nieuwenhuis~et-al
+  - author:
+    - Zhenghua Nie
+    - Jeffrey S Racine
+    title: |-
+      The crs Package: Nonparametric Regression Splines for
+      Continuous and Categorical Predictors
+    journal: The R Journal
+    pages:
+    - 48
+    - 56
+    slug: Nie+S~Racine
+  - author:
+    - John D.-Kloke
+    - Joseph W.-McKean
+    title: 'Rfit: Rank-based Estimation for Linear Models'
+    journal: The R Journal
+    pages:
+    - 57
+    - 64
+    slug: Kloke+McKean
+  - author:
+    - Kayvan Sadeghi
+    - Giovanni M.-Marchetti
+    title: Graphical Markov Models with Mixed Graphs in R
+    journal: The R Journal
+    pages:
+    - 65
+    - 73
+    slug: Sadeghi+Marchetti
+  - author: Rasmus B{\aa}{\aa}th
+    title: Programmer's NicheThe State of Naming Conventions in R
+    journal: The R Journal
+    pages:
+    - 74
+    - 75
+    slug: Baaaath
 
 
