Tweaks to index page and data

--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,8 @@ issues:
 
 
 - issue: 2009-1
-  year: 2009.0
+  year: 2009
+  volume: 1
   num: 1
   month: June
   articles:
@@ -107,7 +108,7 @@ issues:
     - 8
     slug: Chambers
   - author:
-    - Stefan Theu\ss{}l
+    - Stefan Theußl
     - Achim Zeileis
     title: Collaborative Software Development Using R-Forge
     journal: The R Journal
@@ -203,7 +204,8 @@ issues:
     - 65
     slug: Guazzelli+et+al
 - issue: 2010-1
-  year: 2010.0
+  year: 2010
+  volume: 2
   num: 1
   month: June
   articles:
@@ -213,7 +215,7 @@ issues:
     - Philippe Haldermans
     - Ziv Shkedy
     - Tobias Verbeke
-    - Hinrich G\"{o}hlmann
+    - Hinrich Göhlmann
     - An De Bondt
     - Willem Talloen
     - Luc Bijnens.
@@ -255,7 +257,7 @@ issues:
     - 29
     slug: Wilhelm+Manjunath
   - author:
-    - Frauke G\"unther
+    - Frauke Günther
     - Stefan Fritsch
     title: 'neuralnet: Training of neural networks'
     journal: The R Journal
@@ -296,8 +298,9 @@ issues:
     - 58
     slug: Fay
 - issue: 2011-1
-  year: 2011.0
+  year: 2011
   num: 1
+  volume: 3
   month: June
   articles:
   - author: Hadley Wickham
@@ -320,15 +323,15 @@ issues:
     slug: Bohn~et-al
   - author:
     - Yohan Chalabi
-    - Martin M\"achler
-    - and Diethelm W\"urtz
+    - Martin Mächler
+    - and Diethelm Würtz
     title: Rmetrics - timeDate Package
     journal: The R Journal
     pages:
     - 19
     - 24
     slug: Chalabi~et-al
-  - author: Timoth\'ee Poisot
+  - author: Timothée Poisot
     title: |-
       The digitize Package: Extracting Numerical Data from
       Scatterplots
@@ -357,7 +360,7 @@ issues:
     - 43
     slug: South
   - author:
-    - Fr\'ed\'eric Lafitte
+    - Frédéric Lafitte
     - Dirk Van Heule
     - Julien Van hamme
     title: Cryptographic Boolean Functions with R
@@ -410,7 +413,8 @@ issues:
     - 74
     slug: Cook
 - issue: 2012-1
-  year: 2012.0
+  year: 2012
+  volume: 4
   num: 1
   month: June
   articles:
@@ -500,7 +504,7 @@ issues:
     - Duncan Murdoch
     - Achim Zeileis
     title: |-
-      From the CoreWho Did What? The Roles of \proglangR Package
+      From the Core: Who Did What? The Roles of R Package
       Authors and How to Refer to Them
     journal: The R Journal
     pages:
@@ -508,7 +512,8 @@ issues:
     - 69
     slug: Hornik~et-al
 - issue: 2009-2
-  year: 2009.0
+  year: 2009
+  volume: 1
   num: 2
   month: December
   articles:
@@ -557,7 +562,7 @@ issues:
     slug: Coeurjolly~et-al
   - author:
     - J.-Carpenter
-    - G.-R\"ucker
+    - G.-Rücker
     - G.-Schwarzer
     title: 'copas: An R package for Fitting the Copas Selection Model'
     journal: The R Journal
@@ -584,7 +589,7 @@ issues:
   - author:
     - Spencer Graves
     - Sundar Dorai-Raj
-    - Romain Fran\c{c}ois
+    - Romain François
     title: 'sos: Searching Help Pages of R Packages'
     journal: The R Journal
     pages:
@@ -594,14 +599,15 @@ issues:
   - author:
     - Duncan Murdoch
     - Simon Urbanek
-    title: The New R\ Help System
+    title: The New R Help System
     journal: The R Journal
     pages:
     - 60
     - 65
     slug: Murdoch+Urbanek
 - issue: 2010-2
-  year: 2010.0
+  year: 2010
+  volume: 2
   num: 2
   month: December
   articles:
@@ -623,7 +629,7 @@ issues:
     - 19
     slug: Murdoch
   - author:
-    - Lars R\"{o}nneg{\aa}rd
+    - Lars Rönnegård
     - Xia Shen
     - Moudud Alam
     title: |-
@@ -634,7 +640,7 @@ issues:
     - 20
     - 28
     slug: Roennegaard~et-al
-  - author: P\'{e}ter S\'{o}lymos
+  - author: Péter Sólymos
     title: 'dclone: Data Cloning in R'
     journal: The R Journal
     pages:
@@ -699,7 +705,8 @@ issues:
     - 73
     slug: Ishwaran~et-al
 - issue: 2011-2
-  year: 2011.0
+  year: 2011
+  volume: 3
   num: 2
   month: December
   articles:
@@ -771,7 +778,7 @@ issues:
     - 40
     - 44
     slug: Gesmann+de~Castillo
-  - author: Maxime Herv\'e
+  - author: Maxime Hervé
     title: |-
       GrapheR: a Multiplatform GUI for Drawing Customizable
       Graphs in R
@@ -797,7 +804,8 @@ issues:
     - 63
     slug: Plummer
 - issue: 2012-2
-  year: 2012.0
+  year: 2012
+  volume: 4
   num: 2
   month: December
   articles:
@@ -877,7 +885,7 @@ issues:
     - 65
     - 73
     slug: Sadeghi+Marchetti
-  - author: Rasmus B{\aa}{\aa}th
+  - author: Rasmus Bååth
     title: Programmer's NicheThe State of Naming Conventions in R
     journal: The R Journal
     pages:
