Better subtype display

--- a/_config.yml
+++ b/_config.yml
@@ -217,6 +217,7 @@ issues:
       - 56
       - 59
     - slug: Murdoch+Urbanek
+      type: From the Core
       title: The New R Help System
       author:
       - Duncan Murdoch
@@ -525,12 +526,14 @@ issues:
       - 64
       - 68
     - slug: Hyndman
+      type: Help desk
       title: Giving a useR! Talk
       author: Rob J. Hyndman
       pages:
       - 69
       - 71
     - slug: Cook
+      type: Help desk
       title: Tips for Presenting Your Work
       author: Dianne Cook
       pages:
@@ -632,7 +635,8 @@ issues:
       - 54
       - 59
     - slug: Plummer
-      title: 'Programmer''s Niche: Portable C++ for R Packages'
+      type: Programmer's Niche
+      title: 'Portable C++ for R Packages'
       author: Martyn Plummer
       pages:
       - 60
@@ -731,8 +735,9 @@ issues:
       - 60
       - 63
     - slug: Hornik~et-al
+      type: From the Core
       title: |-
-        From the CoreWho Did What? The Roles of R Package Authors
+        Who Did What? The Roles of R Package Authors
         and How to Refer to Them
       author:
       - Kurt Hornik
@@ -830,7 +835,8 @@ issues:
       - 65
       - 73
     - slug: Baaaath
-      title: Programmer's NicheThe State of Naming Conventions in R
+      type: Programmer's Niche
+      title: The State of Naming Conventions in R
       author: Rasmus Bååth
       pages:
       - 74
