First pass at atom feed

--- a/_config.yml
+++ b/_config.yml
@@ -2,28 +2,40 @@ issues:
   - issue: accepted
     articles:
     - title: "Multiple Factor Analysis for Contingency Tables in the FactoMineR Package"
-      authors: "Belchin Kostov, Monica Becue-Bertaut and Francois Husson"
-      url: "Kostov+Becue+Husson.pdf"
+      authors: 
+      - Belchin Kostov
+      - Monica Becue-Bertaut
+      - Francois Husson
+      slug: "Kostov+Becue+Husson"
 
     - title: "Hypothesis Tests for Multivariate Linear Models Using the car Package"
-      authors: "John Fox, Michael Friendly, and Sanford Weisberg"
-      url: "Fox+Friendly+Weisberg.pdf"
+      authors: 
+      - John Fox
+      - Michael Friendly
+      - Sanford Weisberg"
+      slug: "Fox+Friendly+Weisberg"
 
     - title: "osmar: OpenStreetMap and R"
-      authors: "Manuel J. A. Eugster and Thomas Schlesinger"
-      url: "Eugster+Schlesinger.pdf"
+      authors: 
+      - Manuel J. A. Eugster
+      - Thomas Schlesinger
+      slug: "Eugster+Schlesinger"
 
     - title: "ftsa: An R Package for Analyzing Functional Time Series"
-      authors: Han Lin Shang
-      url: Shang.pdf
+      authors: 
+      - Han Lin Shang
+      slug: Shang
 
     - title: "Statistical Software from a Blind Person's Perspective"
-      authors: "A. Jonathan R. Godfrey"
-      url: Godfrey.pdf
+      authors: 
+      - A. Jonathan R. Godfrey
+      slug: Godfrey.pdf
 
     - title: "QCA: A Package for Qualitative Comparative Analysis"
-      authors: "Alrik Thiem and Adrian Dusa"
-      url: Thiem+Dusa.pdf
+      authors: 
+      - Alrik Thiem 
+      - Adrian Dusa
+      slug: Thiem+Dusa
 
   - issue: 2009-1
     year: 2009
