Publish all accepted articles

--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,90 @@
 issues:
   - issue: accepted
     articles:
-    - title: "Multiple Factor Analysis for Contingency Tables in the FactoMineR Package"
-      authors: 
+    - title: 'RTextTools: A Supervised Learning Package for Text Classification'
+      slug: Collingwood-Jurka-Boydstun-etal
+      author:
+      - Loren Collingwood
+      - Timothy P. Jurka
+      - Amber E. Boydstun
+      - Emiliano Grossman
+      - Wouter van Atteveldt
+    - title: 'Generalized Simulated Annealing for Global Optimization: the GenSA Package
+        for R'
+      slug: Xiang-Gubian-Suomela-etal
+      author:
+      - Yang Xiang
+      - Sylvain Gubian
+      - Brian Suomela
+      - Julia Hoeng
+    - title: Multiple Factor Analysis on Contingency Tables in the FactoMineR Package
+      slug: Kostov-BecueBertaut-Husson
+      author:
       - Belchin Kostov
       - Monica Becue-Bertaut
       - Francois Husson
-      slug: "Kostov+Becue+Husson"
-
-    - title: "Hypothesis Tests for Multivariate Linear Models Using the car Package"
-      authors: 
+    - title: Hypothesis Tests for Multivariate Linear Models Using the car Package
+      slug: Fox-Friendly-Weisberg
+      author:
       - John Fox
       - Michael Friendly
-      - Sanford Weisberg"
-      slug: "Fox+Friendly+Weisberg"
-
-    - title: "osmar: OpenStreetMap and R"
-      authors: 
+      - Sanford Weisberg
+    - title: 'osmar: OpenStreetMap and R'
+      slug: Eugster-Schlesinger
+      author:
       - Manuel J. A. Eugster
       - Thomas Schlesinger
-      slug: "Eugster+Schlesinger"
-
-    - title: "ftsa: An R Package for Analyzing Functional Time Series"
-      authors: 
-      - Han Lin Shang
+    - title: 'ftsa: An R Package for Analyzing Functional Time Series'
       slug: Shang
-
-    - title: "Statistical Software from a Blind Person's Perspective"
-      authors: 
-      - A. Jonathan R. Godfrey
-      slug: Godfrey.pdf
-
-    - title: "QCA: A Package for Qualitative Comparative Analysis"
-      authors: 
-      - Alrik Thiem 
-      - Adrian Dusa
-      slug: Thiem+Dusa
+      author: Han Shang
+    - title: Statistical Analysis from a Blind Person's Perspective
+      slug: Godfrey
+      author: A. Jonathan R. Godfrey
+    - title: 'QCA: A Package for Qualitative Comparative Analysis'
+      slug: Thiem-Dusa
+      author:
+      - 'NULL'
+      - Alrik Thiem
+    - title: 'An Introduction to the EcoTroph R package: Analyzing aquatic ecosystem trophic
+        network'
+      slug: Colleter-Guitton-Gascuel
+      author:
+      - 'NULL'
+      - Mathieu Colleter
+      - Jerome Guitton
+      - Didier Gascuel
+    - title: 'StellaR: a Package to Manage Stellar Evolution Tracks and Isochrones'
+      slug: Valle-DellOmodarme
+      author:
+      - Giada Valle
+      - Matteo Dell'Omodarme
+    - title: Let Graphics Tell the Story - Datasets in R
+      slug: Hofmann-Unwin-Cook
+      author:
+      - Heike Hofmann
+      - Antony Unwin
+      - Dianne Cook
+    - title: Estimating Spatial Probit Models in R
+      slug: Wilhelm-Matos
+      author:
+      - Stefan Wilhelm
+      - Miguel Godinho de Matos
+    - title: 'ggmap : Spatial Visualization with ggplot2'
+      slug: Kahle-Wickham
+      author:
+      - David Kahle
+      - Hadley Wickham
+    - title: 'mpoly : Multivariate polynomials in R'
+      slug: Kahle
+      author: David Kahle
+    - title: R.TeMiS, an Integrated Text Mining Solution in R
+      slug: BouchetValat-Bastin
+      author:
+      - Milan Bouchet-Valat
+      - Gilles Bastin
+    - title: Directions for Improved Dependency Versioning in R
+      slug: Ooms
+      author: Jeroen Ooms
 
   - issue: 2009-1
     year: 2009
