Fix data entry errors

--- a/_config.yml
+++ b/_config.yml
@@ -43,13 +43,11 @@ issues:
     - title: 'QCA: A Package for Qualitative Comparative Analysis'
       slug: Thiem-Dusa
       author:
-      - 'NULL'
       - Alrik Thiem
-    - title: 'An Introduction to the EcoTroph R package: Analyzing aquatic ecosystem trophic
-        network'
+    - title: 'An Introduction to the EcoTroph R package: Analyzing Aquatic Ecosystem Trophic
+        Network'
       slug: Colleter-Guitton-Gascuel
       author:
-      - 'NULL'
       - Mathieu Colleter
       - Jerome Guitton
       - Didier Gascuel
