Update with new styles

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,22 @@
 issues:
   - issue: accepted
     articles:
+    - title: 'The beadarrayFilter: An R Package to Filter Beads'
+      slug: Forcheh-Verbeke-Kasim-etal
+      author:
+      - Anyiawung Chiara Forcheh
+      - Geert Verbeke
+      - Adetayo Kasim
+      - Dan Lin
+      - Ziv Shkedy
+      - Willem Talloen
+      - Hinrich W.H. Goehlmann
+      - Lieven Clement
+    - title: 'Fast Pure R Implementation of GEE: Application of the Matrix Package'
+      slug: McDaniel-Henderson-Rathouz
+      author:
+      - Lee S. McDaniel
+      - Nicholas C. Henderson
     - title: 'RTextTools: A Supervised Learning Package for Text Classification'
       slug: Collingwood-Jurka-Boydstun-etal
       author:
