Draft for 2013-01 issue

--- a/_config.yml
+++ b/_config.yml
@@ -1,105 +1,6 @@
 issues:
   - issue: accepted
     articles:
-    - title: 'The beadarrayFilter: An R Package to Filter Beads'
-      slug: Forcheh-Verbeke-Kasim-etal
-      author:
-      - Anyiawung Chiara Forcheh
-      - Geert Verbeke
-      - Adetayo Kasim
-      - Dan Lin
-      - Ziv Shkedy
-      - Willem Talloen
-      - Hinrich W.H. Goehlmann
-      - Lieven Clement
-    - title: 'Fast Pure R Implementation of GEE: Application of the Matrix Package'
-      slug: McDaniel-Henderson-Rathouz
-      author:
-      - Lee S. McDaniel
-      - Nicholas C. Henderson
-    - title: 'RTextTools: A Supervised Learning Package for Text Classification'
-      slug: Collingwood-Jurka-Boydstun-etal
-      author:
-      - Loren Collingwood
-      - Timothy P. Jurka
-      - Amber E. Boydstun
-      - Emiliano Grossman
-      - Wouter van Atteveldt
-    - title: 'Generalized Simulated Annealing for Global Optimization: the GenSA Package
-        for R'
-      slug: Xiang-Gubian-Suomela-etal
-      author:
-      - Yang Xiang
-      - Sylvain Gubian
-      - Brian Suomela
-      - Julia Hoeng
-    - title: Multiple Factor Analysis on Contingency Tables in the FactoMineR Package
-      slug: Kostov-BecueBertaut-Husson
-      author:
-      - Belchin Kostov
-      - Monica Becue-Bertaut
-      - Francois Husson
-    - title: Hypothesis Tests for Multivariate Linear Models Using the car Package
-      slug: Fox-Friendly-Weisberg
-      author:
-      - John Fox
-      - Michael Friendly
-      - Sanford Weisberg
-    - title: 'osmar: OpenStreetMap and R'
-      slug: Eugster-Schlesinger
-      author:
-      - Manuel J. A. Eugster
-      - Thomas Schlesinger
-    - title: 'ftsa: An R Package for Analyzing Functional Time Series'
-      slug: Shang
-      author: Han Shang
-    - title: Statistical Analysis from a Blind Person's Perspective
-      slug: Godfrey
-      author: A. Jonathan R. Godfrey
-    - title: 'QCA: A Package for Qualitative Comparative Analysis'
-      slug: Thiem-Dusa
-      author:
-      - Alrik Thiem
-    - title: 'An Introduction to the EcoTroph R package: Analyzing Aquatic Ecosystem Trophic
-        Network'
-      slug: Colleter-Guitton-Gascuel
-      author:
-      - Mathieu Colleter
-      - Jerome Guitton
-      - Didier Gascuel
-    - title: 'StellaR: a Package to Manage Stellar Evolution Tracks and Isochrones'
-      slug: Valle-DellOmodarme
-      author:
-      - Giada Valle
-      - Matteo Dell'Omodarme
-    - title: Let Graphics Tell the Story - Datasets in R
-      slug: Hofmann-Unwin-Cook
-      author:
-      - Heike Hofmann
-      - Antony Unwin
-      - Dianne Cook
-    - title: Estimating Spatial Probit Models in R
-      slug: Wilhelm-Matos
-      author:
-      - Stefan Wilhelm
-      - Miguel Godinho de Matos
-    - title: 'ggmap : Spatial Visualization with ggplot2'
-      slug: Kahle-Wickham
-      author:
-      - David Kahle
-      - Hadley Wickham
-    - title: 'mpoly : Multivariate polynomials in R'
-      slug: Kahle
-      author: David Kahle
-    - title: R.TeMiS, an Integrated Text Mining Solution in R
-      slug: BouchetValat-Bastin
-      author:
-      - Milan Bouchet-Valat
-      - Gilles Bastin
-    - title: Directions for Improved Dependency Versioning in R
-      slug: Ooms
-      author: Jeroen Ooms
-
   - issue: 2009-1
     year: 2009
     num: 1
@@ -925,3 +826,232 @@ issues:
       page: 101
     - title: R Foundation News
       page: 102
+  - issue: 2013-1
+    year: 2013
+    num: 1
+    month: June
+    articles:
+    - title: Editorial
+      authors: Hadley Wickham
+      slug: editorial
+      pages:
+      - 4
+      - 6
+    - heading: Contributed Research Articles
+    - title: 'RTextTools: A Supervised Learning Package for Text Classification'
+      authors:
+      - Loren Collingwood
+      - Timothy P. Jurka
+      - Amber E. Boydstun
+      - Emiliano Grossman
+      - Wouter van Atteveldt
+      slug: collingwood-jurka-boydstun-etal
+      pages:
+      - 6
+      - 13
+    - title: 'Generalized Simulated Annealing for Global Optimization: the GenSA Package for R'
+      authors:
+      - Yang Xiang
+      - Sylvain Gubian
+      - Brian Suomela
+      - Julia Hoeng
+      slug: xiang-gubian-suomela-etal
+      pages:
+      - 13
+      - 29
+    - title: Multiple Factor Analysis on Contingency Tables in the FactoMineR Package
+      authors:
+      - Belchin Kostov
+      - Monica Becue-Bertaut
+      - Francois Husson
+      slug: kostov-becuebertaut-husson
+      pages:
+      - 29
+      - 39
+    - title: Hypothesis Tests for Multivariate Linear Models Using the car Package
+      authors:
+      - John Fox
+      - Michael Friendly
+      - Sanford Weisberg
+      slug: fox-friendly-weisberg
+      pages:
+      - 39
+      - 53
+    - title: 'osmar: OpenStreetMap and R'
+      authors:
+      - Manuel J. A. Eugster
+      - Thomas Schlesinger
+      slug: eugster-schlesinger
+      pages:
+      - 53
+      - 64
+    - title: 'ftsa: An R Package for Analyzing Functional Time Series'
+      authors: Han Shang
+      slug: shang
+      pages:
+      - 64
+      - 73
+    - title: Statistical Analysis from a Blind Person's Perspective
+      authors: A. Jonathan R. Godfrey
+      slug: godfrey
+      pages:
+      - 73
+      - 80
+    - title: 'FinAsym: Measuring Asymmetric Information in Financial Markets with R'
+      authors: Paolo Zagaglia
+      slug: zagaglia
+      pages:
+      - 80
+      - 87
+    - title: 'QCA: A Package for Qualitative Comparative Analysis'
+      authors:
+      - Alrik Thiem
+      - Adrian Dusa
+      slug: thiem-dusa
+      pages:
+      - 87
+      - 98
+    - title: 'An Introduction to the EcoTroph R package: Analyzing Aquatic Ecosystem
+        Trophic Network'
+      authors:
+      - Mathieu Colleter
+      - Jerome Guitton
+      - Didier Gascuel
+      slug: colleter-guitton-gascuel
+      pages:
+      - 98
+      - 108
+    - title: 'StellaR: a Package to Manage Stellar Evolution Tracks and Isochrones'
+      authors:
+      - Giada Valle
+      - Matteo Dell'Omodarme
+      slug: valle-dellomodarme
+      pages:
+      - 108
+      - 118
+    - title: Let Graphics Tell the Story - Datasets in R
+      authors:
+      - Heike Hofmann
+      - Antony Unwin
+      - Dianne Cook
+      slug: hofmann-unwin-cook
+      pages:
+      - 118
+      - 131
+    - title: Estimating Spatial Probit Models in R
+      authors:
+      - Stefan Wilhelm
+      - Miguel Godinho de Matos
+      slug: wilhelm-matos
+      pages:
+      - 131
+      - 145
+    - title: 'ggmap : Spatial Visualization with ggplot2'
+      authors:
+      - David Kahle
+      - Hadley Wickham
+      slug: kahle-wickham
+      pages:
+      - 145
+      - 164
+    - title: 'mpoly : Multivariate polynomials in R'
+      authors: David Kahle
+      slug: kahle
+      pages:
+      - 164
+      - 173
+    - title: 'The beadarrayFilter: An R Package to Filter Beads'
+      authors:
+      - Anyiawung Chiara Forcheh
+      - Geert Verbeke
+      - Adetayo Kasim
+      - Dan Lin
+      - Ziv Shkedy
+      - Willem Talloen
+      - Hinrich W.H. Goehlmann
+      - Lieven Clement
+      slug: forcheh-verbeke-kasim-etal
+      pages:
+      - 173
+      - 183
+    - title: 'Fast Pure R Implementation of GEE: Application of the Matrix Package'
+      authors:
+      - Lee S. McDaniel
+      - Nicholas C. Henderson
+      - Paul J. Rathouz
+      slug: mcdaniel-henderson-rathouz
+      pages:
+      - 183
+      - 190
+    - title: RcmdrPlugin.temis, a Graphical Integrated Text Mining Solution in R
+      authors:
+      - Milan Bouchet-Valat
+      - Gilles Bastin
+      slug: bouchetvalat-bastin
+      pages:
+      - 190
+      - 199
+    - title: Directions for Improved Dependency Versioning in R
+      authors: Jeroen Ooms
+      slug: ooms
+      pages:
+      - 199
+      - 209
+    - title: 'Translating Probability Distributions: From R to BUGS and Back Again'
+      authors:
+      - David LeBauer
+      - Michael Dietze
+      - Ben Bolker
+      slug: lebauer-dietze-bolker
+      pages:
+      - 209
+      - 212
+    - heading: News and Notes
+    - title: 'Conference Review: The 6th Chinese R Conference'
+      authors:
+      - Jing Leng
+      - Jingjing Guan
+      slug: chinese-r-conf
+      pages:
+      - 212
+      - 214
+    - title: 'Conference Report: R/Finance 2013'
+      authors: Joshua Ulrich
+      slug: r-finance
+      pages:
+      - 214
+      - 217
+    - title: The R User Conference 2013
+      authors: UseR 2013 Organising Committee
+      slug: user2013
+      pages:
+      - 217
+      - 221
+    - title: News from the Bioconductor Project
+      authors: Bioconductor Team
+      slug: bioconductor
+      pages:
+      - 221
+      - 223
+    - title: R Foundation News
+      authors: Kurt Hornik
+      slug: r-foundation
+      pages:
+      - 223
+      - 224
+    - title: Changes in R
+      authors:
+      - Kurt Hornik
+      - Achim Zeileis
+      slug: r-changes
+      pages:
+      - 224
+      - 242
+    - title: Changes on CRAN
+      authors:
+      - Kurt Hornik
+      - Achim Zeileis
+      slug: cran
+      pages:
+      - 242
+      - 267
