--- a/_config.yml
+++ b/_config.yml
@@ -832,14 +832,14 @@ issues:
     month: June
     articles:
     - title: Editorial
-      authors: Hadley Wickham
+      author: Hadley Wickham
       slug: editorial
       pages:
       - 4
       - 6
     - heading: Contributed Research Articles
     - title: 'RTextTools: A Supervised Learning Package for Text Classification'
-      authors:
+      author:
       - Loren Collingwood
       - Timothy P. Jurka
       - Amber E. Boydstun
@@ -850,7 +850,7 @@ issues:
       - 6
       - 13
     - title: 'Generalized Simulated Annealing for Global Optimization: the GenSA Package for R'
-      authors:
+      author:
       - Yang Xiang
       - Sylvain Gubian
       - Brian Suomela
@@ -860,7 +860,7 @@ issues:
       - 13
       - 29
     - title: Multiple Factor Analysis on Contingency Tables in the FactoMineR Package
-      authors:
+      author:
       - Belchin Kostov
       - Monica Becue-Bertaut
       - Francois Husson
@@ -869,7 +869,7 @@ issues:
       - 29
       - 39
     - title: Hypothesis Tests for Multivariate Linear Models Using the car Package
-      authors:
+      author:
       - John Fox
       - Michael Friendly
       - Sanford Weisberg
@@ -878,7 +878,7 @@ issues:
       - 39
       - 53
     - title: 'osmar: OpenStreetMap and R'
-      authors:
+      author:
       - Manuel J. A. Eugster
       - Thomas Schlesinger
       slug: eugster-schlesinger
@@ -886,25 +886,25 @@ issues:
       - 53
       - 64
     - title: 'ftsa: An R Package for Analyzing Functional Time Series'
-      authors: Han Shang
+      author: Han Shang
       slug: shang
       pages:
       - 64
       - 73
     - title: Statistical Analysis from a Blind Person's Perspective
-      authors: A. Jonathan R. Godfrey
+      author: A. Jonathan R. Godfrey
       slug: godfrey
       pages:
       - 73
       - 80
     - title: 'FinAsym: Measuring Asymmetric Information in Financial Markets with R'
-      authors: Paolo Zagaglia
+      author: Paolo Zagaglia
       slug: zagaglia
       pages:
       - 80
       - 87
     - title: 'QCA: A Package for Qualitative Comparative Analysis'
-      authors:
+      author:
       - Alrik Thiem
       - Adrian Dusa
       slug: thiem-dusa
@@ -913,7 +913,7 @@ issues:
       - 98
     - title: 'An Introduction to the EcoTroph R package: Analyzing Aquatic Ecosystem
         Trophic Network'
-      authors:
+      author:
       - Mathieu Colleter
       - Jerome Guitton
       - Didier Gascuel
@@ -922,7 +922,7 @@ issues:
       - 98
       - 108
     - title: 'StellaR: a Package to Manage Stellar Evolution Tracks and Isochrones'
-      authors:
+      author:
       - Giada Valle
       - Matteo Dell'Omodarme
       slug: valle-dellomodarme
@@ -930,7 +930,7 @@ issues:
       - 108
       - 118
     - title: Let Graphics Tell the Story - Datasets in R
-      authors:
+      author:
       - Heike Hofmann
       - Antony Unwin
       - Dianne Cook
@@ -939,7 +939,7 @@ issues:
       - 118
       - 131
     - title: Estimating Spatial Probit Models in R
-      authors:
+      author:
       - Stefan Wilhelm
       - Miguel Godinho de Matos
       slug: wilhelm-matos
@@ -947,7 +947,7 @@ issues:
       - 131
       - 145
     - title: 'ggmap : Spatial Visualization with ggplot2'
-      authors:
+      author:
       - David Kahle
       - Hadley Wickham
       slug: kahle-wickham
@@ -955,13 +955,13 @@ issues:
       - 145
       - 164
     - title: 'mpoly : Multivariate polynomials in R'
-      authors: David Kahle
+      author: David Kahle
       slug: kahle
       pages:
       - 164
       - 173
     - title: 'The beadarrayFilter: An R Package to Filter Beads'
-      authors:
+      author:
       - Anyiawung Chiara Forcheh
       - Geert Verbeke
       - Adetayo Kasim
@@ -975,7 +975,7 @@ issues:
       - 173
       - 183
     - title: 'Fast Pure R Implementation of GEE: Application of the Matrix Package'
-      authors:
+      author:
       - Lee S. McDaniel
       - Nicholas C. Henderson
       - Paul J. Rathouz
@@ -984,7 +984,7 @@ issues:
       - 183
       - 190
     - title: RcmdrPlugin.temis, a Graphical Integrated Text Mining Solution in R
-      authors:
+      author:
       - Milan Bouchet-Valat
       - Gilles Bastin
       slug: bouchetvalat-bastin
@@ -992,13 +992,13 @@ issues:
       - 190
       - 199
     - title: Directions for Improved Dependency Versioning in R
-      authors: Jeroen Ooms
+      author: Jeroen Ooms
       slug: ooms
       pages:
       - 199
       - 209
     - title: 'Translating Probability Distributions: From R to BUGS and Back Again'
-      authors:
+      author:
       - David LeBauer
       - Michael Dietze
       - Ben Bolker
@@ -1008,7 +1008,7 @@ issues:
       - 212
     - heading: News and Notes
     - title: 'Conference Review: The 6th Chinese R Conference'
-      authors:
+      author:
       - Jing Leng
       - Jingjing Guan
       slug: chinese-r-conf
@@ -1016,31 +1016,31 @@ issues:
       - 212
       - 214
     - title: 'Conference Report: R/Finance 2013'
-      authors: Joshua Ulrich
+      author: Joshua Ulrich
       slug: r-finance
       pages:
       - 214
       - 217
     - title: The R User Conference 2013
-      authors: UseR 2013 Organising Committee
+      author: UseR 2013 Organising Committee
       slug: user2013
       pages:
       - 217
       - 221
     - title: News from the Bioconductor Project
-      authors: Bioconductor Team
+      author: Bioconductor Team
       slug: bioconductor
       pages:
       - 221
       - 223
     - title: R Foundation News
-      authors: Kurt Hornik
+      author: Kurt Hornik
       slug: r-foundation
       pages:
       - 223
       - 224
     - title: Changes in R
-      authors:
+      author:
       - Kurt Hornik
       - Achim Zeileis
       slug: r-changes
@@ -1048,7 +1048,7 @@ issues:
       - 224
       - 242
     - title: Changes on CRAN
-      authors:
+      author:
       - Kurt Hornik
       - Achim Zeileis
       slug: cran
