Update articles and metadata

--- a/_config.yml
+++ b/_config.yml
@@ -832,135 +832,137 @@ issues:
     month: June
     articles:
     - title: Editorial
-      author: Hadley Wickham
+      authors: Hadley Wickham
       slug: editorial
       pages:
       - 4
       - 6
     - heading: Contributed Research Articles
     - title: 'RTextTools: A Supervised Learning Package for Text Classification'
+      slug: collingwood-jurka-boydstun-etal
       author:
       - Loren Collingwood
       - Timothy P. Jurka
       - Amber E. Boydstun
       - Emiliano Grossman
       - Wouter van Atteveldt
-      slug: collingwood-jurka-boydstun-etal
       pages:
       - 6
       - 13
-    - title: 'Generalized Simulated Annealing for Global Optimization: the GenSA Package for R'
+    - title: 'Generalized Simulated Annealing for Global Optimization: the GenSA Package
+        for R'
+      slug: xiang-gubian-suomela-etal
       author:
       - Yang Xiang
       - Sylvain Gubian
       - Brian Suomela
       - Julia Hoeng
-      slug: xiang-gubian-suomela-etal
       pages:
       - 13
       - 29
     - title: Multiple Factor Analysis on Contingency Tables in the FactoMineR Package
+      slug: kostov-becuebertaut-husson
       author:
       - Belchin Kostov
       - Monica Becue-Bertaut
       - Francois Husson
-      slug: kostov-becuebertaut-husson
       pages:
       - 29
       - 39
     - title: Hypothesis Tests for Multivariate Linear Models Using the car Package
+      slug: fox-friendly-weisberg
       author:
       - John Fox
       - Michael Friendly
       - Sanford Weisberg
-      slug: fox-friendly-weisberg
       pages:
       - 39
       - 53
     - title: 'osmar: OpenStreetMap and R'
+      slug: eugster-schlesinger
       author:
       - Manuel J. A. Eugster
       - Thomas Schlesinger
-      slug: eugster-schlesinger
       pages:
       - 53
       - 64
     - title: 'ftsa: An R Package for Analyzing Functional Time Series'
-      author: Han Shang
       slug: shang
+      author: Han Shang
       pages:
       - 64
       - 73
     - title: Statistical Analysis from a Blind Person's Perspective
-      author: A. Jonathan R. Godfrey
       slug: godfrey
+      author: A. Jonathan R. Godfrey
       pages:
       - 73
       - 80
-    - title: 'FinAsym: Measuring Asymmetric Information in Financial Markets with R'
-      author: Paolo Zagaglia
+    - title: 'PIN: Measuring Asymmetric Information in Financial Markets with R'
       slug: zagaglia
+      author: Paolo Zagaglia
       pages:
       - 80
       - 87
     - title: 'QCA: A Package for Qualitative Comparative Analysis'
+      slug: thiem-dusa
       author:
       - Alrik Thiem
       - Adrian Dusa
-      slug: thiem-dusa
       pages:
       - 87
       - 98
     - title: 'An Introduction to the EcoTroph R package: Analyzing Aquatic Ecosystem
         Trophic Network'
+      slug: colleter-guitton-gascuel
       author:
       - Mathieu Colleter
       - Jerome Guitton
       - Didier Gascuel
-      slug: colleter-guitton-gascuel
       pages:
       - 98
       - 108
     - title: 'StellaR: a Package to Manage Stellar Evolution Tracks and Isochrones'
+      slug: valle-dellomodarme
       author:
       - Giada Valle
       - Matteo Dell'Omodarme
-      slug: valle-dellomodarme
       pages:
       - 108
-      - 118
+      - 117
     - title: Let Graphics Tell the Story - Datasets in R
+      slug: hofmann-unwin-cook
       author:
       - Heike Hofmann
       - Antony Unwin
       - Dianne Cook
-      slug: hofmann-unwin-cook
       pages:
-      - 118
-      - 131
+      - 117
+      - 130
     - title: Estimating Spatial Probit Models in R
+      slug: wilhelm-matos
       author:
       - Stefan Wilhelm
       - Miguel Godinho de Matos
-      slug: wilhelm-matos
       pages:
-      - 131
-      - 145
+      - 130
+      - 144
     - title: 'ggmap : Spatial Visualization with ggplot2'
+      slug: kahle-wickham
       author:
       - David Kahle
       - Hadley Wickham
-      slug: kahle-wickham
       pages:
-      - 145
-      - 164
+      - 144
+      - 162
     - title: 'mpoly : Multivariate polynomials in R'
-      author: David Kahle
       slug: kahle
+      author: David Kahle
       pages:
-      - 164
-      - 173
+      - 162
+      - 171
     - title: 'The beadarrayFilter: An R Package to Filter Beads'
+      slug: forcheh-verbeke-kasim-etal
       author:
       - Anyiawung Chiara Forcheh
       - Geert Verbeke
@@ -970,88 +972,88 @@ issues:
       - Willem Talloen
       - Hinrich W.H. Goehlmann
       - Lieven Clement
-      slug: forcheh-verbeke-kasim-etal
       pages:
-      - 173
-      - 183
+      - 171
+      - 181
     - title: 'Fast Pure R Implementation of GEE: Application of the Matrix Package'
+      slug: mcdaniel-henderson-rathouz
       author:
       - Lee S. McDaniel
       - Nicholas C. Henderson
       - Paul J. Rathouz
-      slug: mcdaniel-henderson-rathouz
       pages:
-      - 183
-      - 190
+      - 181
+      - 188
     - title: RcmdrPlugin.temis, a Graphical Integrated Text Mining Solution in R
+      slug: bouchetvalat-bastin
       author:
       - Milan Bouchet-Valat
       - Gilles Bastin
-      slug: bouchetvalat-bastin
       pages:
-      - 190
-      - 199
+      - 188
+      - 197
     - title: Directions for Improved Dependency Versioning in R
-      author: Jeroen Ooms
       slug: ooms
+      author: Jeroen Ooms
       pages:
-      - 199
-      - 209
+      - 197
+      - 207
     - title: 'Translating Probability Distributions: From R to BUGS and Back Again'
+      slug: lebauer-dietze-bolker
       author:
       - David LeBauer
       - Michael Dietze
       - Ben Bolker
-      slug: lebauer-dietze-bolker
       pages:
-      - 209
-      - 212
+      - 207
+      - 210
     - heading: News and Notes
     - title: 'Conference Review: The 6th Chinese R Conference'
-      author:
+      authors:
       - Jing Leng
       - Jingjing Guan
       slug: chinese-r-conf
       pages:
+      - 210
       - 212
-      - 214
     - title: 'Conference Report: R/Finance 2013'
-      author: Joshua Ulrich
+      authors: Joshua Ulrich
       slug: r-finance
       pages:
-      - 214
-      - 217
+      - 212
+      - 215
     - title: The R User Conference 2013
-      author: UseR 2013 Organising Committee
+      authors: UseR 2013 Organising Committee
       slug: user2013
       pages:
-      - 217
-      - 221
+      - 215
+      - 218
     - title: News from the Bioconductor Project
-      author: Bioconductor Team
+      authors: Bioconductor Team
       slug: bioconductor
       pages:
-      - 221
-      - 223
+      - 218
+      - 220
     - title: R Foundation News
-      author: Kurt Hornik
+      authors: Kurt Hornik
       slug: r-foundation
       pages:
-      - 223
-      - 224
+      - 220
+      - 221
     - title: Changes in R
-      author:
+      authors:
       - Kurt Hornik
       - Achim Zeileis
       slug: r-changes
       pages:
-      - 224
-      - 242
+      - 221
+      - 239
     - title: Changes on CRAN
-      author:
+      authors:
       - Kurt Hornik
       - Achim Zeileis
       slug: cran
       pages:
-      - 242
-      - 267
+      - 239
+      - 264
+   
