--- a/_config.yml
+++ b/_config.yml
@@ -832,7 +832,7 @@ issues:
     month: June
     articles:
     - title: Editorial
-      authors: Hadley Wickham
+      author: Hadley Wickham
       slug: editorial
       pages:
       - 4
@@ -1009,7 +1009,7 @@ issues:
       - 210
     - heading: News and Notes
     - title: 'Conference Review: The 6th Chinese R Conference'
-      authors:
+      author:
       - Jing Leng
       - Jingjing Guan
       slug: chinese-r-conf
@@ -1017,31 +1017,31 @@ issues:
       - 210
       - 212
     - title: 'Conference Report: R/Finance 2013'
-      authors: Joshua Ulrich
+      author: Joshua Ulrich
       slug: r-finance
       pages:
       - 212
       - 215
     - title: The R User Conference 2013
-      authors: UseR 2013 Organising Committee
+      author: UseR 2013 Organising Committee
       slug: user2013
       pages:
       - 215
       - 218
     - title: News from the Bioconductor Project
-      authors: Bioconductor Team
+      author: Bioconductor Team
       slug: bioconductor
       pages:
       - 218
       - 220
     - title: R Foundation News
-      authors: Kurt Hornik
+      author: Kurt Hornik
       slug: r-foundation
       pages:
       - 220
       - 221
     - title: Changes in R
-      authors:
+      author:
       - Kurt Hornik
       - Achim Zeileis
       slug: r-changes
@@ -1049,7 +1049,7 @@ issues:
       - 221
       - 239
     - title: Changes on CRAN
-      authors:
+      author:
       - Kurt Hornik
       - Achim Zeileis
       slug: cran
