--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ issues:
   - issue: 2009-1
     year: 2009
     num: 1
-    month: June
+    month: Jun
     articles:
     - slug: Chambers
       title: Facets of R
@@ -119,7 +119,7 @@ issues:
   - issue: 2009-2
     year: 2009
     num: 2
-    month: December
+    month: Dec
     articles:
     - slug: Fox
       title: |-
@@ -219,7 +219,7 @@ issues:
   - issue: 2010-1
     year: 2010
     num: 1
-    month: June
+    month: Jun
     articles:
     - slug: Pramana~et-al
       title: |-
@@ -319,7 +319,7 @@ issues:
   - issue: 2010-2
     year: 2010
     num: 2
-    month: December
+    month: Dec
     articles:
     - slug: Soetaert~et-al
       title: Solving Differential Equations in R
@@ -414,7 +414,7 @@ issues:
   - issue: 2011-1
     year: 2011
     num: 1
-    month: June
+    month: Jun
     articles:
     - slug: Wickham
       title: 'testthat: Get Started with Testing'
@@ -531,7 +531,7 @@ issues:
   - issue: 2011-2
     year: 2011
     num: 2
-    month: December
+    month: Dec
     articles:
     - slug: Baier~et-al
       title: Creating and Deploying an Application with (R)Excel and R
@@ -635,7 +635,7 @@ issues:
   - issue: 2012-1
     year: 2012
     num: 1
-    month: June
+    month: Jun
     articles:
     - slug: G~Barnett-et-al
       title: Analysing Seasonal Data
@@ -740,7 +740,7 @@ issues:
   - issue: 2012-2
     year: 2012
     num: 2
-    month: December
+    month: Dec
     articles:
     - slug: Murrell
       title: What's in a Name?
@@ -829,7 +829,8 @@ issues:
   - issue: 2013-1
     year: 2013
     num: 1
-    month: June
+    volume: 5
+    month: Jun
     articles:
     - title: Editorial
       author: Hadley Wickham
@@ -1056,4 +1057,3 @@ issues:
       pages:
       - 239
       - 264
-   
