Add volumes to all issues

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ issues:
     articles:
   - issue: 2009-1
     year: 2009
+    volume: 1
     num: 1
     month: jun
     articles:
@@ -118,6 +119,7 @@ issues:
       page: 92
   - issue: 2009-2
     year: 2009
+    volume: 1
     num: 2
     month: dec
     articles:
@@ -217,6 +219,7 @@ issues:
     - title: R Foundation News
       page: 86
   - issue: 2010-1
+    volume: 2
     year: 2010
     num: 1
     month: jun
@@ -317,6 +320,7 @@ issues:
     - title: R Foundation News
       page: 102
   - issue: 2010-2
+    volume: 2
     year: 2010
     num: 2
     month: dec
@@ -412,6 +416,7 @@ issues:
     - title: R Foundation News
       page: 96
   - issue: 2011-1
+    volume: 3
     year: 2011
     num: 1
     month: jun
@@ -529,6 +534,7 @@ issues:
     - title: R Foundation News
       page: 96
   - issue: 2011-2
+    volume: 3
     year: 2011
     num: 2
     month: dec
@@ -633,6 +639,7 @@ issues:
     - title: R Foundation News
       page: 102
   - issue: 2012-1
+    volume: 4
     year: 2012
     num: 1
     month: jun
@@ -738,6 +745,7 @@ issues:
     - title: R Foundation News
       page: 87
   - issue: 2012-2
+    volume: 4
     year: 2012
     num: 2
     month: dec
